# Recommendation-System-Algorithm

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  COPYRIGHT  DEPLOYMENT.md  NOTICE  README.md  SECURITY.md
candidate-pipeline/: candidate_pipeline.rs  lib.rs
home-mixer/: lib.rs  main.rs
home-mixer/candidate_pipeline/: query_features.rs
home-mixer/scorers/: phoenix_scorer.rs
phoenix/: README.md  grok.py  pyproject.toml  recsys_model.py  recsys_retrieval_model.py  run_ranker.py  run_retrieval.py  runners.py  test_recsys_model.py  test_recsys_retrieval_model.py
thunder/: kafka_utils.rs  lib.rs  main.rs  thunder_service.rs
