[project]
name = "phoenix"
version = "0.1.0"
description = "Phoenix recommendation system model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dm-haiku>=0.0.13",
    "jax==0.8.1",
    "numpy>=1.26.4",
    "pyright>=1.1.408",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.ruff]
indent-width = 4
line-length = 100

[tool.ruff.lint]
# Only ignore rules that are intentionally violated for specific reasons
ignore = [
    "ISC001",  # Implicit string concatenation - conflicts with formatter
]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]

[dependency-groups]
dev = [
    "pytest",
]
